--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -31,7 +31,7 @@ body, html {
 
 li,ul {
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
   line-height: normal;
 }
 
@@ -51,6 +51,10 @@ button,div,i,li,ul {
 
 button {
   border: 0;
+}
+
+li {
+  list-style: none;
 }
 
 .iconfont {
