--- a/src/assets/styles/_var.scss
+++ b/src/assets/styles/_var.scss
@@ -1,4 +1,6 @@
 /* 颜色 */
 $color-text: #292525;
 
+$header-height: 13.4rem;
+
 $font-family: -apple-system,BlinkMacSystemFont,PingFang SC,Hiragino Sans GB,Microsoft YaHei,"\5FAE\8F6F\96C5\9ED1",helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,Arial,sans-serif;
